login page completed

--- a/Mekashron.POC/appsettings.json
+++ b/Mekashron.POC/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "AppSettings": {
+    "SeedUser": {
+      "firstName": "John",
+      "lastName": "Doe",
+      "email": "john@doe.com",
+      "password": "p@ssvvord!",
+      "mobile": "5353533553",
+      "countryId": "0",
+      "aId": "0",
+      "signUpIp": "127.0.0.1"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
