--- a/Mekashron.POC/Mekashron.POC.csproj
+++ b/Mekashron.POC/Mekashron.POC.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.7.*" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.7.*" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.7.*" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.8.1" />
     <PackageReference Include="System.ServiceModel.Security" Version="4.7.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\js\handlers\" />
   </ItemGroup>
 
 </Project>
