--- a/Mekashron.POC/Mekashron.POC.csproj
+++ b/Mekashron.POC/Mekashron.POC.csproj
@@ -2,9 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.7.*" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.7.*" />
